Doc/force-app/main/default/objects/Subscription_History_Snapshot__c/Subscription_History_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Subscription History Snapshot</label>
    <nameField>
        <label>Subscription History Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription History Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>