Doc/force-app/main/default/objects/Subscription_History_Snapshot__c/fields/Change_Other_2__c.field-meta.xml
<CustomField>
    <fullName>Change_Other_2__c</fullName>
    <formula>OR(
  CSM_Health_Change_Code__c=&quot;A to New&quot;,
  CSM_Health_Change_Code__c=&quot;B to Blank&quot;,
  CSM_Health_Change_Code__c=&quot;B to B&quot;,
  CSM_Health_Change_Code__c=&quot;B to E&quot;,
  CSM_Health_Change_Code__c=&quot;B to New&quot;,
  CSM_Health_Change_Code__c=&quot;C to Blank&quot;,
  CSM_Health_Change_Code__c=&quot;C to C&quot;,
  CSM_Health_Change_Code__c=&quot;C to E&quot;
)</formula>
    <label>Change Other (2)?</label>
    <type>Checkbox</type>
</CustomField>