Doc/force-app/main/default/objects/Subscription_History_Snapshot__c/fields/CSM_Health_Change_New__c.field-meta.xml
<CustomField>
    <fullName>CSM_Health_Change_New__c</fullName>
    <label>CSM Health Change - New</label>
    <length>255</length>
    <type>Text</type>
</CustomField>