Doc/force-app/main/default/objects/Subscription_History_Snapshot__c/fields/Customer_Lifecycle_Stage_Previous__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lifecycle_Stage_Previous__c</fullName>
    <label>Product Implementation Phase - Previous</label>
    <length>100</length>
    <type>Text</type>
</CustomField>